Jaden fix (#12)
* images, no overlap with design agency

* fix spacing

* fix paths

* contact

* images, no overlap with design agency

* fix spacing

* formatting

* update og

---------

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,7 +12,7 @@ html {
   --border: #d5d5d5;
   --secondary: #777777;
 
-  /* took this from design agency */    
+  /* took this from design agency */
   --color-primary-50: oklch(97.7% 0.013 236.62);
   --color-primary-100: oklch(95.1% 0.026 236.824);
   --color-primary-200: oklch(90.1% 0.058 230.902);
@@ -83,8 +83,10 @@ body::after {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: linear-gradient(rgba(255, 255, 255, 0.1) 1px,
-      transparent 1px);
+  background-image: linear-gradient(
+    rgba(255, 255, 255, 0.1) 1px,
+    transparent 1px
+  );
   background-size: 2px 2px;
   background-repeat: repeat;
   pointer-events: none;
@@ -92,10 +94,12 @@ body::after {
 }
 
 .hero-gradient {
-  background: linear-gradient(to top right,
-      var(--color-primary-500) 0%,
-      var(--color-primary-700) 15%,
-      var(--foreground) 40%);
+  background: linear-gradient(
+    to top right,
+    var(--color-primary-500) 0%,
+    var(--color-primary-700) 15%,
+    var(--foreground) 40%
+  );
 }
 
 @keyframes marquee {
